feat: add adaptive

--- a/main.css
+++ b/main.css
@@ -1,10 +1,7 @@
-﻿#wrapper {
-  
-}
-
-#main {
+﻿#main {
   background-image: url(images/start-screen-gradient-background.png);
-  width: 1280px;
+  background-size: cover;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
@@ -92,8 +89,7 @@
 
 #makeBtn:hover {
   transition: all 1s ease;
-  background-color: #FFFFFF;
-  box-shadow: 0px 0px 3px 3px #F1CDB3;
+  background-color: #FDDCC4;
 }
 
 #getBtn {
@@ -108,27 +104,27 @@
 }
 
 #blocks {
-  width: 1280px;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
-#firstBlock {
+#aboutUs {
   display: flex;
   justify-content: center;
 }
 
-#firstBlock > img {
+#aboutUs > img {
   position: relative;
   height: 80%;
   top: 5em;
   left: -5em;
 }
 
-#secondBlock, #fourthBlock {
+#ourFriends, #donation {
   background-color: #F6F6F6;
 }
 
-#secondBlock > h3 {
+#ourFriends > h3 {
   position: relative;
   top: 1.7em;
   margin-bottom: 3.3em;
@@ -165,12 +161,12 @@
   text-align: center;
 }
 
-#text-block {
+#text-block_aboutUs {
   width: 30%;
   margin-bottom: 8em;
 }
 
-#text-block > p {
+#text-block_aboutUs > p {
   width: 110%;
   position: relative;
   top: 3.2em;
@@ -184,7 +180,7 @@
   color: #4C4C4C;  
 }
 
-#text-block > h3 {
+#text-block_aboutUs > h3 {
   position: relative;
   top: 1.7em;
   left: 1.1em;
@@ -197,7 +193,7 @@
   color: #545454;
 }
 
-#thirdBlock > h3 {
+#help > h3 {
   font-family: 'Georgia';
   font-style: normal;
   font-weight: 400;
@@ -218,6 +214,7 @@
 #icon {
   display: flex;
   flex-direction: column;
+  align-items: center;
   align-content: space-between;
   max-width: 60px;
   margin: 0 6em 3em 5em;
@@ -236,12 +233,12 @@
   color: #545454;
 }
 
-#fourthBlock {
+#donation {
   display: flex;
   justify-content: center;
 }
 
-#fourthBlock > img {
+#donation > img {
   margin: 5.8em 1.9em 5.5em 1em;
 }
 
@@ -298,4 +295,248 @@
 #credit-card > a {
   text-decoration: none;
   color: #292929;
+}
+
+@media (max-width: 768px) {
+  #ourFriends, #help, #donation, #aboutUs, #main, #blocks {
+    max-width: 768px;
+  }
+  .header-main {
+    margin-top: -3em;
+    margin-bottom: 4em;
+  }
+  #logo, nav {
+    margin-top: 3rem;
+  }
+  #notOnly {
+    flex-direction: column;
+  }
+  #notOnly > img{
+    position: relative;
+    top: 10rem;
+    left: 10rem;
+    width: 75%;
+    margin-bottom: 10rem;
+  }
+  #annotation {
+    width: 71%;
+    top: 4rem;
+  }
+  #annotation > h2, #annotation > p {
+    margin-left: 7rem;
+  }
+  #btnWrap {
+    position: relative;
+    left: 15rem;
+    width: max-content;
+  }
+  #aboutUs {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  #aboutUs > img {
+    position: relative;
+    width: 39%;
+    margin-bottom: 10rem;
+    top: 6em;
+    left: 0;
+  }
+  #text-block_aboutUs {
+    width: 55%;
+    margin: 0 auto;
+  }
+  #text-block_aboutUs > p {
+    width: 100%;
+    position: relative;
+    top: 2.5em;
+    left: 0;
+    margin-bottom: 1.5em;
+  }
+  #text-block_aboutUs > h3 {
+    width: 90%;
+    position: relative;
+    top: 1.3em;
+    left: 0;
+  }
+  #card:nth-last-child(2) {
+    display: none;
+  }
+  #icon {
+    margin: 0 5em 1em 5em;
+  }
+  #donation {
+    flex-direction: column-reverse;
+  }
+  #donation > img {
+    width: 67%;
+    margin: 3.5em auto 6em;
+  }
+  #donateInfo {
+    width: 52%;
+    margin: 0 auto;
+  }
+  #donateInfo > h3 {
+    width: 80%;
+    margin: 2.4em 1em 0 0;
+  }
+  #donateInfo > h5 {
+    font-size: 15px;
+    margin: 1.2em 0.5em 1.1em 0;
+    color: #545454;
+  }
+  #donateInfo > p {
+    margin: 1.5em 3em 0 0;
+    color: #B2B2B2;
+  }
+  #credit-card {
+    width: fit-content;
+  }
+}
+
+@media (max-width: 320px) {
+  #ourFriends, #help, #donation, #aboutUs, #main, #blocks {
+    width: 320px;
+  }
+  .header-main {
+    width: 100%;
+    margin-top: -3em;
+    margin-bottom: 4em;
+  }
+  #notOnly {
+    flex-direction: column;
+  }
+  #notOnly > img{
+    position: relative;
+    top: 1rem;
+    left: 3.5rem;
+    width: 75%;
+    margin: 6rem 0 2rem 0;
+  }
+  #annotation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    left: -2.5em;
+    width: 100%;
+  }
+  .hamburger-menu {
+    position: absolute;
+    display: block;
+    top: -1.5em;
+    right: -8em;
+  }
+  #annotation > h2, #annotation > p {
+    margin: 1em 0;
+    text-align: center;
+  }
+  #annotation > h2 {
+    font-size: 25px;
+  }
+  #annotation > p {
+    width: 95%;
+  }
+  #btnWrap {
+    position: relative;
+    left: 0;
+    margin: 2em 0 4em 0;
+    width: max-content;
+  }
+  #aboutUs {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  #aboutUs > img {
+    width: 80%;
+    margin-bottom: 5em;
+    top: 5em;
+    left: 0;
+  }
+  #text-block_aboutUs {
+    width: 100%;
+    margin: 0 auto;
+  }
+  #text-block_aboutUs > p {
+    width: 85%;
+    position: relative;
+    top: 2.5em;
+    left: 1.5em;
+    margin-bottom: 1.5em;
+  }
+  #text-block_aboutUs > h3 {
+    width: 90%;
+    position: relative;
+    top: 1.3em;
+    font-size: 25px;
+    text-align: center;
+  }
+  #ourFriends > h3 {
+    font-size: 25px;
+  }
+  #getBtn {
+    margin: 0 0 7em 0;
+  }
+  #btnArrow1, #btnArrow2 {
+    margin-bottom: 3em;
+  }  
+  #card:nth-last-child(-n+3) {
+    display: none;
+  }
+  #cardsBlock {
+    display: flex;
+    flex-flow: wrap;
+  }
+  #card {
+    order: 1;
+  }
+  #btnArrow1 {
+    order: 2;
+  }
+  #btnArrow2 {
+    order: 2;
+  }
+  #help > h3 {
+    font-size: 25px;
+  }
+  #icons {
+    justify-content: start;
+  }
+  #icon {
+    margin: 0 3em 0.5em 3em;
+  }
+  #icon > span{
+    font-size: 15px;
+  }
+  #icon > img{
+    width: 80%;
+  }
+  #donation {
+    flex-direction: column-reverse;
+  }
+  #donation > img {
+    width: 80%;
+    margin: 5em auto;
+  }
+  #donateInfo {
+    width: 100%;
+    margin: 0 auto;
+  }
+  #donateInfo > h3 {
+    width: 70%;
+    text-align: center;
+    font-size: 25px;
+    margin: 3em auto 0;
+  }
+  #donateInfo > h5 {
+    margin: 1.1em 0 1.1em 0.5em;
+  }
+  #donateInfo > p {
+    margin: 1.5em 1.6em 0;
+  }
+  #credit-card {
+    margin: 0 auto;
+  }
+  #credit-card > a {
+    font-size: 15px;
+  }
 }
