--- a/styles/general.css
+++ b/styles/general.css
@@ -70,6 +70,89 @@ nav {
   text-decoration-thickness: 3px;
 }
 
+#menu__toggle {
+  opacity: 0;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(90deg);
+}
+
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  right: 38%;
+}
+
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 5rem;
+  right: 10rem;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #F1CDB3;
+  transition-duration: 0.5s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  z-index: 2;
+  position: relative;
+  visibility: hidden;
+  top: 100px;
+  right: -100%;
+  width: 320px;
+  height: inherit;
+  margin: 0;
+  padding: 50px 0;
+  list-style: none;
+  background-color: #292929;
+  transition-duration: 0.5s;
+}
+
+.menu__item {
+  text-align: center;
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 160%;
+  color: #FAFAFA;
+  margin: 10px 0px;
+  transition-duration: 0.5s;
+}
+
+.menu__item:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: #F1CDB3;
+  text-decoration-thickness: 3px;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
 #cardsBlock {
   display: flex;
   flex-wrap: wrap;
@@ -130,16 +213,16 @@ nav {
 }
 
 #learnMoreBtn:hover {
-  background-color: #292929;
-  color: #F1CDB3;
+  background-color: #F1CDB3;
 }
 
 .footer {
   display: flex;
   justify-content: space-between;
-  width: 1280px;
+  max-width: 1280px;
   margin: 0 auto;
   background-image: url(../images/start-screen-gradient-background.png);
+  background-size: cover;
 }
 
 #footer-puppy {
@@ -168,7 +251,12 @@ nav {
   color: #FFFFFF;
 }
 
-#contacts > h4, #adress > h4 {
+#contacts > a, #adress > a {
+  display: flex;
+  text-decoration: none;
+}
+
+#contacts > a > h4, #adress > a > h4 {
   font-family: 'Georgia';
   font-style: normal;
   font-weight: 400;
@@ -179,7 +267,6 @@ nav {
 }
 
 #contacts > a > img, #adress > a > img {
-  float: left;
   margin-right: 1em;
 }
 
@@ -187,4 +274,66 @@ nav {
   text-decoration-line: underline;
   text-decoration-color: #F1CDB3;
   text-decoration-thickness: 3px;
+}
+
+@media (max-width: 768px) {
+  #ourFriends, .header, .footer {
+    max-width: 768px;
+  }
+  #logo {
+    top: 2em;
+  }
+  nav {
+    top: 2.2em;
+  }
+  .footer {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  #contacts, #adress {
+    width: 40%;
+  }
+  #contacts, #adress {
+    margin: 0 0.8em 3.2em 0;
+  }
+  #footer-puppy {
+    margin: 0 auto;
+  }
+  #contacts > a > img, #adress > a > img {
+    margin-top: 1em;
+  }
+}
+
+@media (max-width: 320px) {
+  #ourFriends, .header, .footer {
+    width: 320px;
+  }
+  nav {
+    display: none;
+  }
+  #logo {
+    top: 2em;
+  }
+  .hamburger-menu {
+    position: absolute;
+    display: block;
+    top: -1.5em;
+    right: -8em;
+  }
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  #contacts, #adress {
+    margin: 0 0.5rem;
+    width: 100%;
+  }
+  #contacts > h3, #adress > h3 {
+    font-size: 25px;
+    text-align: center;
+  }
+  #footer-puppy {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
